--- a/public/partials/entidadobjeto.html
+++ b/public/partials/entidadobjeto.html
@@ -5,7 +5,7 @@
 			<div class="hidden-print col-sm-12 text-center">
 				<span class="btn btn-primary" ng-click="newCarta()">Registar una nueva carta de compromisos</span>
 			</div>
-			<table class="table table-striped table-hover hidden-print" ng-If="$root.permisoscalculados.superuser">
+			<table class="table table-striped table-hover hidden-print" ng-show="$root.permisoscalculados.superuser">
 				<caption>
 					<div class="col-md-12">
 						<div class="col-md-4">
@@ -72,39 +72,57 @@
 							<span ng-if="!entidadobjeto.$editar">{{entidadobjeto[clave].toString().split('&').join(' &') }}</span>
 						</td>
 						<td class="text-right">
-							{{ getCount(entidadobjeto._id) }}
+							{{ objetivos[entidadobjeto._id] ? objetivos[entidadobjeto._id] : 0 }}
 						</td>
 						<td class="text-center">
-							{{getFormulasStats(entidadobjeto._id) }}
+							 {{formulas[entidadobjeto._id] ? formulas[entidadobjeto._id].formsok : 0}}/{{formulas[entidadobjeto._id] ? formulas[entidadobjeto._id].forms : 0}}
 						</td>
 						<td class="text-right">
-							<a href="/indicador/{{entidadobjeto.idjerarquia}}" target="_blank">{{getIndicadoresStats(entidadobjeto.idjerarquia, anualidad.value)}}</a>
+							<a href="/indicador/{{entidadobjeto.idjerarquia}}" target="_blank">{{getIndicadoresStats(entidadobjeto.idjerarquia, anualidad.value)}}/{{indicadores[entidadobjeto.idjerarquia].length}}</a>
 						</td>
 						<td class="text-right">
-							<a href="/carta-informe/{{entidadobjeto.idjerarquia}}/{{entidadobjeto._id}}/{{anualidad.label}}" title="{{acciones[anualidad.label][ entidadobjeto._id ] }} acciones de mejora en {{getPlanes(entidadobjeto, anualidad.label)}} planes" target="_blank"> {{acciones[anualidad.label][ entidadobjeto._id ] }}</a>
+							<a href="/carta-informe/{{entidadobjeto.idjerarquia}}/{{entidadobjeto._id}}/{{anualidad.label}}" title="{{acciones[anualidad.label][ entidadobjeto._id ] }} acciones de mejora en {{getPlanes(entidadobjeto, anualidad.label)}} planes" target="_blank">{{acciones[anualidad.label][ entidadobjeto._id ] }}</a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 
-			<div class="visible-print-block">
+			<div class="">
 				<table class="table table-striped table-condensed">
+					<thead>
+						<tr>
+							<th>Exp.</th>
+							<th>Denominación</th>
+							<th>Compromisos</th>
+							<th>Fórmulas</th>
+							<th>Indicadores<br />{{anualidad.label}}</th>
+							<th>Planes de mejora<br />{{anualidad.label}}</th>
+						</tr>
+					</thead>
 					<tbody>
-						<tr ng-repeat-start="entidadobjeto in entidades | orderBy:'expediente' ">
+						<tr ng-repeat-start="entidadobjeto in entidades | orderBy:'expediente' " style="border-top:solid 2px black">
 							<td class="text-center" style="white-space: nowrap;">{{entidadobjeto.expediente}}</td>
 							<td><strong>{{entidadobjeto.denominacion}}</strong></td>
-							<td>{{ getCount(entidadobjeto._id) }}</td>
-							<td>{{getFormulasStats(entidadobjeto._id) }}</td>
-							<td class="text-center"><i class="fa" ng-class="{'fa-check-square-o': getCount(entidadobjeto._id) > 0, 'fa-square-o': getCount(entidadobjeto._id) === 0}"></i></td>
-							<td class="text-center"><i class="fa" ng-class="{'fa-check-square-o': getFormulasStats(entidadobjeto._id) != '0/0', 'fa-square-o': getFormulasStats(entidadobjeto._id) === '0/0'}"></i></td>
+							<td class="text-center">{{ objetivos[entidadobjeto._id] ? objetivos[entidadobjeto._id] : 0 }}</td>
+							<td class="text-center"> {{formulas[entidadobjeto._id] ? formulas[entidadobjeto._id].formsok : 0}}/{{formulas[entidadobjeto._id] ? formulas[entidadobjeto._id].forms : 0}}</td>
+							<td class="text-center">{{getIndicadoresStats(entidadobjeto.idjerarquia, anualidad.value)}}/{{indicadores[ entidadobjeto.idjerarquia ].length}}</td>
+							<td class="text-center">{{acciones[anualidad.label][ entidadobjeto._id ] ? acciones[anualidad.label][ entidadobjeto._id ] : 0 }}</td>
 						</tr>
 						<tr ng-repeat-end>
-							<td class="text-center"><i class="fa fa-square-o fa-2"></i></td>
-							<td colspan="3">
+							<td class="text-center"><i class="fa fa-2" ng-class="{'fa-check-square-o': entidadobjeto.idjerarquia && entidadobjeto.expediente, 'fa-square-o': !(entidadobjeto.idjerarquia && entidadobjeto.expediente) }"></i></td>
+							<td>
 								<strong>{{entidadobjeto.idjerarquia}}</strong>: {{ jerarquias ['' + entidadobjeto.idjerarquia].nombrelargo }}
 							</td>
-							<td class="text-center"><i class="fa fa-square-o"></i></td>
-							<td class="text-center"><i class="fa fa-square-o"></i></td>
+							<td class="text-center"><i class="fa" ng-class="{'fa-check-square-o': objetivos[entidadobjeto._id], 'fa-square-o': !objetivos[entidadobjeto._id]}"></i></td>
+							<td class="text-center"><i class="fa" ng-class="{
+							'fa-square-o': !formulas[entidadobjeto._id],
+							'fa-check-square-o': formulas[entidadobjeto._id] && formulas[entidadobjeto._id].forms === formulas[entidadobjeto._id].formsok,
+							'fa-check-square': formulas[entidadobjeto._id] && formulas[entidadobjeto._id].forms !== formulas[entidadobjeto._id].formsok }"></td>
+							<td class="text-center"><i class="fa" ng-class="{
+							'fa-square-o': indicadores[entidadobjeto.idjerarquia].length === 0,
+							'fa-check-square-o': indicadores[entidadobjeto.idjerarquia].length > 0 && indicadores[entidadobjeto.idjerarquia].length === getIndicadoresStats(entidadobjeto.idjerarquia, anualidad.value),
+							'fa-check-square': indicadores[entidadobjeto.idjerarquia].length > 0 && indicadores[entidadobjeto.idjerarquia].length !== getIndicadoresStats(entidadobjeto.idjerarquia, anualidad.value) }"></td>
+							<td class="text-center"><i class="fa" ng-class="{'fa-check-square-o': acciones[anualidad.label][ entidadobjeto._id ] > 0, 'fa-square-o': acciones[anualidad.label][ entidadobjeto._id ] === 0}"></td>
 						</tr>
 					</tbody>
 				</table>
