--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -64,7 +64,7 @@
 								<ul>
 									<li class="label label-default" ng-show="$root.permisoscalculados.superuser">Su usuario tiene capacidades de administrador.</li>
 									<li ng-show="permiso.login">Asignado por ser usuario con login: {{permiso.login}}.</li>
-									<li ng-show="permiso.codplaza">Asignado por ser usuario con login: {{permiso.codplaza}}.</li>
+									<li ng-show="permiso.codplaza">Asignado por ser usuario con código de plaza: {{permiso.codplaza}}.</li>
 									<li ng-show="permiso.entidadobjetodirectaescritura.length > 0">
 									Tiene permiso de escritura sobre
 										<span ng-show="permiso.entidadobjetodirectaescritura.length === 1">la carta</span>
