--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -11,7 +11,7 @@
 						<p>Recuerde que si tiene alguna consulta que realizar puede remitir un correo electrónico a:</p>
 							<ul>
 								<li>Consulta técnica:
-									<a href="mailto:{{'cartasdeservicios' + '@' + 'listas.carm.es'}}">{{'cartasdeservicios' + '@' + 'listas.carm.es'}}</a>
+									<a href="mailto:{{'sici' + '@' + 'listas.carm.es'}}">{{'sici' + '@' + 'listas.carm.es'}}</a>
 								</li>
 								<li>Error de la aplicación:
 									<a href="mailto:{{'soporte.tecnologico' + '@' + 'ffis.es'}}">{{'soporte.tecnologico' + '@' + 'ffis.es'}}</a>
