--- a/public/partials/etiqueta.html
+++ b/public/partials/etiqueta.html
@@ -1,3 +1,5 @@
+
+<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
 <div class="row">
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
