--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -36,7 +36,7 @@
 		<![endif]-->
 	</div>
 	<div style="position:absolute; bottom:1em;right:1em; width:20em; height:20em;{{imagen}};background-repeat:no-repeat; background-size:contain; background-position:center center"></div>
-	<h3>Sistema Integrado de Control de Indicadores</h3>
+	<h3>Sistema Integrado de Control de Indicadores 2.0</h3>
 	<h4>Beta - Cartas de Servicio</h4>
 </div>
 <div style="clear:both"></div>
