--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -1,13 +1,8 @@
 
 
-
-
-<div class="row" ng-if="!procedimientoSeleccionado.eliminado">
+<div class="row" ng-hide="!procedimientoSeleccionado || procedimientoSeleccionado.eliminado">
 	<div class="col-lg-12">
-		<div class="btn btn-default pull-right" ng-click="$root.exportDOC('detalles', 'Procedimiento_' + procedimientoSeleccionado.codigo)">
-			<span class="glyphicon glyphicon-book"></span>
-		</div>
-		<div ng-if="procedimientoSeleccionado" class="details" id="detalles" >
+		<div class="details" id="detalles" >
 			<hr/>
 			<h4 class="text-danger">{{procedimientoSeleccionado.denominacion}}</h4>
 			<ol class="breadcrumb" id="breadcrumb">
@@ -17,7 +12,7 @@
 				<li class="active">{{procedimientoSeleccionado.denominacion}}</li>
 				<li class="active" >{{anualidad.substring(1, 5)}}
 					<a ng-if="$root.permisoscalculados.superuser" href="" ng-click="setShowArbol()">&nbsp;
-						<span  class="glyphicon glyphicon-pencil"></span>
+						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
 				</li>
 			</ol>
@@ -25,9 +20,7 @@
 			<div  ng-if="$root.permisoscalculados.superuser" ng-class="{'hidden':!isShowArbol()}" class="animated">
 				<div class="panel panel-danger">
 					<div class="panel-heading">
-						<h3 class="panel-title">
-							Organismos
-						</h3>
+						<h3 class="panel-title">Organismos</h3>
 					</div>
 					<div class="panel-body">
 						<input type="text" ng-model="texto.$" placeholder="Filtro" style="margin-bottom:1em" class="form-control"/>
@@ -131,15 +124,15 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 					<li ng-repeat="attr in attrspar" >
 						<strong>{{attr| translate}}</strong>
 						<span>&nbsp;</span>
-						<a ng-if="$root.permisoscalculados.superuser" href="#" onaftersave="recalculate(true)" editable-text="procedimientoSeleccionado[attr]">{{(procedimientoSeleccionado[attr]!=null && procedimientoSeleccionado[attr] != '') ?procedimientoSeleccionado[attr] : '-' }}</a>
-						<span ng-if="!$root.permisoscalculados.superuser" >{{ procedimientoSeleccionado[attr]!=null ?procedimientoSeleccionado[attr]  : '-' }}</span>
+						<a ng-if="$root.permisoscalculados.superuser" href="#" onaftersave="recalculate(true)" editable-text="procedimientoSeleccionado[attr]">{{(procedimientoSeleccionado[attr]!=null && procedimientoSeleccionado[attr] != '') ?procedimientoSeleccionado[attr] : '-'}}</a>
+						<span ng-if="!$root.permisoscalculados.superuser">{{ procedimientoSeleccionado[attr]!=null ?procedimientoSeleccionado[attr]  : '-'}}</span>
 					</li>
 					<li ng-repeat="(index,attr) in attrsanualidad" ng-show="exists(attr)">
 						<div >
 							<strong>{{attr| translate}}</strong>
 							<span>&nbsp;</span>
-							<a title="edita este valor" href="#" ng-if="(W  && attrsanualidad_permisos[index] != 's' && (attr!='pendientes_iniciales' || getIntAnualidad()==2014)) || $root.permisoscalculados.superuser" onaftersave="recalculate(true)" editable-text="procedimientoSeleccionado.periodos[anualidad][attr]">{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] :  '-' }}</a>
-							<span ng-if="!((W && attrsanualidad_permisos[index] != 's' && (attr!='pendientes_iniciales' || getIntAnualidad()==2014) ) || $root.permisoscalculados.superuser)" >{{ (procedimientoSeleccionado.periodos[anualidad][attr]!=null && procedimientoSeleccionado.periodos[anualidad][attr]!='') ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
+							<a title="edita este valor" href="#" ng-if="(W && attrsanualidad_permisos[index] != 's' && (attr!='pendientes_iniciales' || getIntAnualidad() === 2014)) || $root.permisoscalculados.superuser" onaftersave="recalculate(true)" editable-text="procedimientoSeleccionado.periodos[anualidad][attr]">{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] :  '-' }}</a>
+							<span ng-if="!((W && attrsanualidad_permisos[index] != 's' && (attr!='pendientes_iniciales' || getIntAnualidad() === 2014)) || $root.permisoscalculados.superuser)" >{{ (procedimientoSeleccionado.periodos[anualidad][attr]!=null && procedimientoSeleccionado.periodos[anualidad][attr]!='') ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
 						</div>
 					</li>
 					<li>
@@ -154,7 +147,7 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 							</a>
 						</div>
 						<div ng-if="mostrarAutocompletePadre">
-							<input  placeholder="Introduce cualquier parte del c&oacute;digo o denominaci&oacute;n" class="col-lg-9 col-xs-12" type="text" ng-model="padre" typeahead-on-select="updatePadre($item)" name="padre" typeahead="showProcedimiento(procpadre) for procpadre in procedimientosPadre | codigoDenominacion:$viewValue | limitTo:10" typeahead-editable="false" />
+							<input  placeholder="Introduce cualquier parte del c&oacute;digo o denominaci&oacute;n" class="col-lg-9 col-xs-12" type="text" ng-model="padre" typeahead-on-select="updatePadre($item)" name="padre" uib-typeahead="showProcedimiento(procpadre) for procpadre in procedimientosPadre | codigoDenominacion:$viewValue | limitTo:10" typeahead-editable="false" />
 							<a style="text-decoration: none;" ng-if="$root.permisoscalculados.superuser" href="" ng-click="ocultarEditarPadre()">&nbsp;
 								<span class="glyphicon glyphicon-remove"></span>
 							</a>
@@ -195,13 +188,13 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 						<ul ng-repeat="responsable in procedimientoSeleccionado.responsables">
 							<li ng-repeat="attr in attrsresp">
 								<strong>{{attr| translate}}</strong>
-								<span>&nbsp; {{ responsable[attr] || '-' }}</span>
+								<span>&nbsp; {{responsable[attr] || '-'}}</span>
 							</li>
 						</ul>
-						<p ng-If="(!procedimientoSeleccionado.responsables || procedimientoSeleccionado.responsables.length==0) && procedimientoSeleccionado.cod_plaza">
+						<p ng-if="(!procedimientoSeleccionado.responsables || procedimientoSeleccionado.responsables.length==0) && procedimientoSeleccionado.cod_plaza">
 							No hay ninguna persona asociada al código de plaza {{procedimientoSeleccionado.cod_plaza}}.
 						</p>
-						<p ng-If="(!procedimientoSeleccionado.responsables || procedimientoSeleccionado.responsables.length==0) && !procedimientoSeleccionado.cod_plaza">
+						<p ng-if="(!procedimientoSeleccionado.responsables || procedimientoSeleccionado.responsables.length==0) && !procedimientoSeleccionado.cod_plaza">
 							Debe establecer el código de plaza del responsable de este procedimiento.
 						</p>
 					</div>
@@ -240,9 +233,15 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 			<div style="clear:both" class="table-responsive">
 				<nav>
 					<ul class="pager" ng-if="procedimientoSeleccionado.periodos[anualidad]">
-						<li ng-if="!!procedimientoSeleccionado.periodos['a' + getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
-						<li ng-if="W && !periodosOk(anualidad, procedimientoSeleccionado)" style="cursor: help" title="Complete en la parte superior los cmapos relativos al 'Plazo CS /ANS' y al 'Plazo máximo legal para resolver'"><br/><span class="alert alert-danger" role="alert">Debe definir el plazo en alguna de las modalidades para poder introducir datos.</span></li>
-						<li ng-if="!!procedimientoSeleccionado.periodos['a' + getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
+						<li ng-if="!!procedimientoSeleccionado.periodos['a' + getPrev()]" class="previous" >
+							<a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a>
+						</li>
+						<li ng-if="W && !periodosOk(anualidad, procedimientoSeleccionado)" style="cursor: help" title="Complete en la parte superior los campos relativos al 'Plazo CS /ANS' y al 'Plazo máximo legal para resolver'">
+							<br/><span class="alert alert-danger" role="alert">Debe definir el plazo en alguna de las modalidades para poder introducir datos.</span>
+						</li>
+						<li ng-if="!!procedimientoSeleccionado.periodos['a' + getNext()]" class="next" >
+							<a ng-click="nextYear()" href="">{{getNext()}} <span aria-hidden="true">&rarr;</span></a>
+						</li>
 					</ul>
 				</nav>
 				<table class="table table-striped table-bordered">
@@ -273,7 +272,6 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 									{{val| numberFormat}}
 								</span>
 							</td>
-
 						</tr>
 					</tbody>
 					<tfooter>
@@ -346,8 +344,8 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 				</div>
 			</div>
 			<hr/>
-			<h5 class="text-danger" ng-If="procedimientoSeleccionado.periodos[anualidad].Incidencias">Incidencias</h5>
-			<div class="table-resposive" ng-If="procedimientoSeleccionado.periodos[anualidad].Incidencias">
+			<h5 class="text-danger" ng-if="procedimientoSeleccionado.periodos[anualidad].Incidencias">Incidencias</h5>
+			<div class="table-resposive" ng-if="procedimientoSeleccionado.periodos[anualidad].Incidencias">
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
@@ -364,9 +362,9 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 				</table>
 			</div>
 
-			<hr  ng-If="procedimientoSeleccionado.periodos[anualidad].Incidencias"/>
-			<h5 class="text-danger" ng-If="inconsistencias.length>0">Inconsistencias</h5>
-			<p ng-If="inconsistencias.length>0">Una inconsistencia se da cuando alguno de los datos introducidos no refleja valores coherentes con el resto. Así, por ejemplo, no es consistente que haya un número negativo de expedientes resueltos, ni que el número de expedientes resueltos sea superior al de expedientes solicitados.</p>
+			<hr  ng-if="procedimientoSeleccionado.periodos[anualidad].Incidencias"/>
+			<h5 class="text-danger" ng-if="inconsistencias.length>0">Inconsistencias</h5>
+			<p ng-if="inconsistencias.length>0">Una inconsistencia se da cuando alguno de los datos introducidos no refleja valores coherentes con el resto. Así, por ejemplo, no es consistente que haya un número negativo de expedientes resueltos, ni que el número de expedientes resueltos sea superior al de expedientes solicitados.</p>
 			<div ng-repeat="inconsistencia in inconsistencias" role="alert" ng-if="inconsistencia.datos.length > 0" class="alert alert-warning">
 				<span>{{inconsistencia.titulo}}</span>
 			</div>
